[tool.poetry]
name = "noko-celebrations"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["email"], version = "^1.10.2"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
Flake8-pyproject = "^1.1.0"
types-requests = "^2.28.11"
bandit = {extras = ["toml"], version = "^1.7.4"}
responses = "^0.22.0"
pytest = "^7.1.3"
freezegun = "^1.2.2"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = ["venv", ".venv", "tests"]

[tool.bandit]
exclude_dirs  = ["venv", ".venv", "tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]

exclude = [
  "^tests",
  "_test/.py",
  "^.venv",
  "^venv"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases =true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
